--- a/css_learn/04.Units/css/style.css
+++ b/css_learn/04.Units/css/style.css
@@ -1,3 +1,9 @@
+.box {
+    background-color: red;
+    outline: solid black;
+    margin: 1rem;
+}
+
 .fifty-percent {
     width: 50%;
 }
@@ -8,4 +14,9 @@
 
 .parent {
     width: 135px;
+    outline: solid black;
+}
+
+h1 {
+    font-size: 3rem;
 }
