--- a/css_learn/05_LESSON/css/style.css
+++ b/css_learn/05_LESSON/css/style.css
@@ -1,9 +1,9 @@
 * {
-    margin: 0;
-    padding: 0;
+
+    margin: 0px;
+    padding: 0px;
     box-sizing: border-box;
 }
-
 body {
     font-family: Arial, Helvetica, sans-serif;
     line-height: 1.5;
@@ -13,24 +13,10 @@ body {
     min-height: 100vh;
 }
 
-p {
-    color: #0000FF;
+.container {
+    border: 2px dashed red;
+    font-size: 1.5rem;
+    padding: 1em;
+    margin: 1em;
 }
 
-h1 {
-    border: 6px dashed red;
-    width: 50%;
-    font-size: 3rem;
-    padding: 0.5em;
-}
-
-main {
-    width: 50vw;
-    background-color: skyblue;
-    font-size: 2rem;
-}
-
-p {
-    font-size: 2rem;
-    width: 20ch;
-}
