--- a/fancy/apple-like/css/style.css
+++ b/fancy/apple-like/css/style.css
@@ -9,7 +9,12 @@ html {
 
 body {
     background: #000;
-    height: 400vh;
+    height: 500vh;
+}
+
+.wrapper {
+    position: relative;
+    height: 250vh;
 }
 
 canvas {
@@ -19,4 +24,10 @@ canvas {
     transform: translate(-50%, -50%);
     max-width: 100vh;
     max-height: 100vw;
+}
+
+p {
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    font-size: 2rem;
 }
