--- a/fancy/apple-like/css/style.css
+++ b/fancy/apple-like/css/style.css
@@ -27,7 +27,11 @@ canvas {
 }
 
 p {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     color: white;
-    font-size: 2rem;
+    font-size: 5rem;
 }
