--- a/fancy/apple-like/css/style.css
+++ b/fancy/apple-like/css/style.css
@@ -1,4 +1,7 @@
-* {
+*,
+*::before,
+*::after
+{
     margin: 0;
     padding: 0;
 }
@@ -10,6 +13,19 @@ html {
 body {
     background: #000;
     height: 500vh;
+}
+header li {
+    display: flex;
+
+    width: 100vw;
+    height: 5vh;
+}
+header ul {
+    display: flex;
+    justify-content: end;
+    position: fixed;
+    color: white;
+    text-decoration: none;
 }
 
 .wrapper {
@@ -26,12 +42,18 @@ canvas {
     max-height: 100vw;
 }
 
-p {
+.constructor-info {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-content: center;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     color: white;
     font-size: 5rem;
+}
+
+p {
+    font: white;
+    z-index: 1;
 }
